fix: improve readability on login form

--- a/public/common/login.css
+++ b/public/common/login.css
@@ -55,7 +55,7 @@ a {
     border-radius: var(--input-field-radius);
     border: none;
     box-shadow: inset 0 0 0 1px var(--login-border);
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 
 .login-button {
@@ -101,5 +101,6 @@ a {
 
     .login-field {
         padding: 1.5rem;
+        font-size: 1rem;
     }
 }
